--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint --ext .js,.vue src",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "gen-api": "node ./scripts/generate-apis.js",
+    "clean": "rimraf ./scripts/bin"
   },
   "dependencies": {
     "direct-vuex": "^0.12.0",
@@ -14,6 +16,7 @@
     "vuex": "^4.0.0-beta.4"
   },
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^1.0.15-4.3.1",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "@vue/compiler-sfc": "^3.0.0-beta.21",
@@ -23,7 +26,9 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^7.0.0-alpha.8",
     "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
     "sass": "^1.26.10",
+    "ts-morph": "^8.1.0",
     "typescript": "^3.9.6",
     "vite": "^1.0.0-beta.11"
   },
