--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/parser": "^3.6.1",
     "@vue/compiler-sfc": "^3.0.0-beta.21",
     "autoprefixer": "^9.8.5",
+    "axios": "^0.20.0",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
