--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^7.0.1",
+    "postcss-normalize": "^9.0.0",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
     "sass": "^1.27.0",
