--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ jobs:
   packages:
     name: Packages
     runs-on: ubuntu-latest
+    env:
+      CI: true
     steps:
       - uses: actions/setup-node@v1
         with:
@@ -15,6 +17,8 @@ jobs:
   genApi:
     name: Generate APIs
     runs-on: ubuntu-latest
+    env:
+      CI: true
     steps:
       - uses: actions/setup-node@v1
         with:
@@ -30,6 +34,8 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     needs: [packages, genApi]
+    env:
+      CI: true
     steps:
       - uses: actions/setup-node@v1
         with:
@@ -47,6 +53,8 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     needs: [packages, genApi]
+    env:
+      CI: true
     steps:
       - uses: actions/setup-node@v1
         with:
@@ -62,6 +70,8 @@ jobs:
     name: Type Check
     runs-on: ubuntu-latest
     needs: [packages, genApi]
+    env:
+      CI: true
     steps:
       - uses: actions/setup-node@v1
         with:
