--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.2.5",
+    "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.20.0",
+    "@vitejs/plugin-vue": "^1.2.1",
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^9.8.6",
     "eslint": "^7.23.0",
