--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/js": "^5.9.55",
+    "@traptitech/vite-plugin-trap-auth": "^0.2.0",
     "axios": "^0.21.1",
     "direct-vuex": "^0.12.1",
     "vue": "^3.1.5",
