--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@traptitech/vite-plugin-trap-auth": "^0.2.1",
     "axios": "^0.24.0",
     "direct-vuex": "^0.12.1",
+    "v-calendar": "^3.0.0-alpha.5",
     "vue": "^3.1.5",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
