--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-boilerplate-plus",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3005",
     "build": "vite build",
     "lint": "eslint --ext .ts,.vue src",
     "type-check": "tsc",
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@mdi/js": "^7.0.96",
-    "@traptitech/vite-plugin-trap-auth": "^0.2.7",
+    "@traptitech/vite-plugin-trap-auth": "^0.3.1",
     "axios": "^1.2.2",
     "direct-vuex": "^0.12.1",
     "vue": "^3.2.41",
@@ -23,8 +23,7 @@
     "@types/node": "^18.11.10",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.42.0",
-    "@vitejs/plugin-vue": "^2.3.4",
-    "@vue/compiler-sfc": "^3.2.41",
+    "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.5.0",
@@ -37,7 +36,7 @@
     "sass": "^1.56.1",
     "ts-morph": "^16.0.0",
     "typescript": "^4.8.4",
-    "vite": "^2.9.14"
+    "vite": "^4.1.4"
   },
   "private": true
 }
